<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.DetailUsersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnShare"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_followers_title" />

        <ImageView
            android:id="@+id/img_item_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/photo_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_item_avatar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:text="@string/name_user"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/img_item_avatar"
            app:layout_constraintTop_toBottomOf="@+id/img_item_avatar" />

        <TextView
            android:id="@+id/tv_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_name"
            android:layout_alignEnd="@+id/tv_item_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:text="@string/name_user"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_name"
            app:layout_constraintStart_toEndOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_item_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_username"
            android:layout_alignParentStart="true"
            android:text="@string/user_followers"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_followers_title"
            app:layout_constraintStart_toStartOf="@+id/tv_item_followers_title"
            app:layout_constraintTop_toTopOf="@+id/img_item_avatar" />

        <TextView
            android:id="@+id/tv_item_followers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_username"
            android:layout_alignEnd="@+id/tv_item_username"
            android:layout_marginTop="12dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/tv_item_followers"
            android:text="@string/followers_title"
            app:layout_constraintStart_toStartOf="@+id/btnShare"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_followers" />

        <TextView
            android:id="@+id/tv_item_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_username"
            android:layout_alignEnd="@+id/tv_item_username"
            android:layout_toEndOf="@+id/tv_item_followers_title"
            android:text="@string/user_following"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_following_title"
            app:layout_constraintStart_toStartOf="@+id/tv_item_following_title"
            app:layout_constraintTop_toTopOf="@+id/img_item_avatar" />

        <TextView
            android:id="@+id/tv_item_following_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_username"
            android:layout_toEndOf="@+id/tv_item_following"
            android:text="@string/following_title"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_followers_title"
            app:layout_constraintEnd_toEndOf="@+id/btnShare"
            app:layout_constraintTop_toTopOf="@+id/tv_item_followers_title" />

        <TextView
            android:id="@+id/tv_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_location"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_repository"
            app:layout_constraintStart_toStartOf="@+id/tv_item_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_company" />

        <TextView
            android:id="@+id/tv_item_repository_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/user_repository_title"
            app:layout_constraintBottom_toBottomOf="@+id/tv_repository"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_following_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_repository"
            app:layout_constraintTop_toTopOf="@+id/tv_repository"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_item_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_company"
            app:layout_constraintStart_toStartOf="@+id/tv_item_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_location" />

        <TextView
            android:id="@+id/item_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_title"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:layout_marginTop="290dp"
            app:layout_constraintTop_toTopOf="parent"
            app:tabTextColor="@android:color/white"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tabs"
            app:layout_constraintStart_toStartOf="@+id/tabs"
            app:layout_constraintTop_toBottomOf="@+id/tabs" >
        </androidx.viewpager2.widget.ViewPager2>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFav"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@drawable/ic_fav_unpressed"
            app:backgroundTint="@color/white"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/fav_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>